# whois_mcp_server

./: LICENSE  MANIFEST.in  README.md  build_and_publish.py  pyproject.toml  setup.py
tests/: test_whois.py
whois_mcp/: __init__.py  __main__.py  main.py  test_query.py
whois_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
